# rethinkdb_pandas

./: .gitignore  README.md  pyproject.toml  requirements.txt
rethinkdb_pandas/: __init__.py
rethinkdb_pandas/core/: db.py  rethinkdb.py  table.py
tests/: test.py
